--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,7 +32,7 @@ hr {
 p {
   text-align: left !important;
 }
-.navbar-brand{
+.navbar-brand {
   font-size: 26px !important;
   font-weight: 500 !important;
 }
@@ -161,16 +161,9 @@ p {
 }
 .signup-form .btn,
 .signup-form .btn:active {
-  font-size: 16px;
-  font-weight: bold;
-  background: #19aa8d !important;
-  border: none;
-  min-width: 140px;
+  text-decoration: none !important;
 }
-.signup-form .btn:hover,
-.signup-form .btn:focus {
-  background: #179b81 !important;
-}
+
 .signup-form a {
   color: #fff;
   text-decoration: underline;
@@ -179,7 +172,7 @@ p {
   text-decoration: none;
 }
 .signup-form form a {
-  color: #19aa8d;
+  color: rgb(0, 195, 255);
   text-decoration: none;
 }
 .signup-form form a:hover {
@@ -196,3 +189,56 @@ p {
   position: absolute;
 }
 /* Registration Page ENDS */
+/* LOGIN PAGE START */
+
+.login-body {
+  height: 100%;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-align: center;
+  -ms-flex-pack: center;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
+
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.form-signin .form-control {
+  position: relative;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  padding-bottom: 15px;
+  font-size: 16px;
+}
+.form-control:focus {
+  border-color: #000000 !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(0, 0, 0) !important;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: 1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="password"] {
+  margin-top: 1px;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+.ghov:hover {
+  background-color: #000000 !important;
+  color: rgb(0, 195, 255) !important;
+}
