--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,6 +36,9 @@ p {
   font-size: 26px !important;
   font-weight: 500 !important;
 }
+.dropdown-item:active{
+background-color:black !important;
+}
 
 .text-light {
   color: rgb(255, 255, 255);
