--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,6 +39,9 @@ p {
 .dropdown-item:active{
 background-color:black !important;
 }
+.card-zoom:hover {
+  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
 
 .text-light {
   color: rgb(255, 255, 255);
