--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,7 +40,9 @@ p {
 background-color:black !important;
 }
 .card-zoom:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.07); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  border-color: #000000 !important;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgb(0, 0, 0) !important;
 }
 
 .text-light {
